# Libretranslate-rs-cli

./: .gitmodules  Cargo.toml  deploy.sh
src/: lib.rs  main.rs
